edited and added modals to home page

--- a/Design/pages/Goals.html
+++ b/Design/pages/Goals.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../source/design.css">
 
     <script src="design.js"></script>
-    <title>Goal</title>
+    <title>Goals</title>
 
 </head>
 
