--- a/Design/pages/add ex.html
+++ b/Design/pages/add ex.html
@@ -151,7 +151,7 @@
                     </table>
                     <hr>
                     <form>
-                        <b align="right">Calories burnd:</b>
+                        <b align="right">Calories burned:</b>
                         <input type="text"><br>
                     </form>
                 </div>
