--- a/Design/pages/exercise.html
+++ b/Design/pages/exercise.html
@@ -53,7 +53,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="./Exercise.html">Exercise</a>
+                                <a class="nav-link" href="./food.html">Food</a>
                             </li>
 
                             <li class="nav-item">
