--- a/Design/pages/Landing.html
+++ b/Design/pages/Landing.html
@@ -77,7 +77,7 @@
             <hr>
             <div class="row py-5 align-items-center">
                 <div class="col-lg-6">
-                    <img src="https://via.placeholder.com/300x200" width="100%" class="img-fluid" alt="placeholder">
+                    <img src="pics/weightracker.jpg" width="100%" class="img-fluid" alt="placeholder">
                 </div>
                 <div class="col-lg-6">
                     <h3>Weight Tracking</h3>
@@ -94,12 +94,12 @@
                     </p>
                 </div>
                 <div class="col-lg-6">
-                    <img src="https://via.placeholder.com/300x200" width="100%" class="img-fluid" alt="placeholder">
+                    <img src="pics/goals.jpg" width="100%" class="img-fluid" alt="placeholder">
                 </div>
             </div>
             <div class="row py-5 align-items-center">
                 <div class="col-lg-6">
-                    <img src="https://via.placeholder.com/300x200" width="100%" class="img-fluid" alt="placeholder">
+                    <img src="pics/brooke-lark-nTZOILVZuOg-unsplash.jpg" width="100%" class="img-fluid" alt="placeholder">
                 </div>
                 <div class="col-lg-6">
                     <h3>Exercise and food tracking</h3>
