--- a/Design/pages/Goal details.html
+++ b/Design/pages/Goal details.html
@@ -13,6 +13,7 @@
 
 
     <script src="design.js"></script>
+    <link rel="stylesheet" href="../source/design.css">
     <title>Goal Details</title>
 
 </head>
@@ -69,12 +70,6 @@
             <div class="col-lg-12 text-center">
                 <h2>Goal Details</h2>
             </div>
-            <div class="dropdown">
-                <input type="search" id="searchBar" class="form-control dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <div class="dropdown-menu" aria-labelledby="searchBar">
-
-                </div>
-            </div>
 
 
         </div>
@@ -106,8 +101,8 @@
                         </tr>
                     </table>
                 </div>
-                <form action="">
-                    <div class="form-inline pt-4">
+                <form>
+                    <div class="form-inline form-group pt-4">
                         <lable class="lable mr-1">Weight</lable>
                         <input type="number" class="form-control mr-1">
                         <button class="btn btnn-primary text-white">Log</button>
