added add goal modal

--- a/Design/pages/Goals.html
+++ b/Design/pages/Goals.html
@@ -103,7 +103,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Edit Goal</h4>
+                    <h4 class="modal-title">Edit/Add Goal</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -167,9 +167,8 @@
                         </tr>
                     </table>
                     <div class="d-flex">
-                        <button class="btn btnn-primary">Add Goal</button>
-                        <button class="btn ml-auto btnn-primary" type="button" data-toggle="modal"
-                            data-target="#editGoalModal">Edit Goal</button>
+                        <button class="btn btnn-primary" data-toggle="modal" data-target="#editGoalModal">Add Goal</button>
+                        <button class="btn ml-auto btnn-primary" type="button" data-toggle="modal" data-target="#editGoalModal">Edit Goal</button>
                     </div>
                 </div>
                 <form action="">
