--- a/Design/pages/Landing.html
+++ b/Design/pages/Landing.html
@@ -59,7 +59,7 @@
                         <hr class="">
                         <p class="text-white text-justify pb-0" style="font-size: 1rem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae odio officiis blanditiis in excepturi! Deserunt voluptas odio eum ullam, dolore culpa error consequuntur placeat aut sequi non modi earum facere?
                         </p>
-                        <a href="" class="btn btn-block text-white btnn-primary">Let's start</a>
+                        <a data-toggle="modal" data-target="#signup-modal" href="#" class="btn btn-block text-white btnn-primary">Let's start</a>
                     </div>
 
                 </div>
