--- a/Design/pages/Home.html
+++ b/Design/pages/Home.html
@@ -437,7 +437,7 @@
                                 <tr>
                                     <th>Exercise</th>
                                     <th>Time</th>
-                                    <th>Calories Burned</th>
+                                    <th class="text-center">Calories Burned</th>
                                     <th>Delete</th>
                                 </tr>
                             </thead>
@@ -445,7 +445,7 @@
                                 <tr>
                                     <td>push-ups</td>
                                     <td>15</td>
-                                    <td> 255</td>
+                                    <td class="text-center"> 255</td>
                                     <td class="text-center">
                                         <p class="fa fa-trash-o pr-2 text-center"></p>
                                     </td>
@@ -454,16 +454,16 @@
                                 <tr>
                                     <td>running</td>
                                     <td>15</td>
-                                    <td> 255</td>
+                                    <td class="text-center"> 255</td>
                                     <td class="text-center">
                                         <p class="fa fa-trash-o pr-2"></p>
                                     </td>
 
                                 </tr>
                                 <tr>
-                                    <td>jummping</td>
+                                    <td>jumping</td>
                                     <td>15</td>
-                                    <td> 255</td>
+                                    <td class="text-center"> 255</td>
                                     <td class="text-center">
                                         <p class="fa fa-trash-o pr-2"></p>
                                     </td>
