pic added to testimonials

--- a/Design/pages/Landing.html
+++ b/Design/pages/Landing.html
@@ -125,15 +125,15 @@
                     <div class="align-items-center">
                             <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
                                     <div class="carousel-inner">
-                                      <div class="carousel-item active p-5" data-interval="10000">
+                                      <div class="carousel-item active p-5" data-interval="3000">
                                             <img class="img-thumbnail" src="https://avatars1.githubusercontent.com/u/35393156?s=460&v=4"alt="">
                                             <div class="d-block w-100 p-5 text-white">
                                                 <i class="fa fa-quote-left fa-2x pr-2"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit., maiores illo reprehenderit, fugit quae velit, perspiciatis delectus dicta dolorem modi culpa! Veniam exercitationem
                                                 est debitis sinte<i class="fa fa-quote-right fa-2x pl-2"></i>
                                             </div>
                                       </div>
-                                      <div class="carousel-item p-5" data-interval="2000">
-                                            <img class="img-thumbnail" src="https://avatars1.githubusercontent.com/u/35393156?s=460&v=4"alt="">
+                                      <div class="carousel-item p-5" data-interval="3000">
+                                            <img class="img-thumbnail" src="pics/hunain.jpg"alt="">
                                             <div class="d-block w-100 p-5 text-white">
                                                 <i class="fa fa-quote-left fa-2x pr-2"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit., maiores illo reprehenderit, fugit quae velit, perspiciatis delectus dicta dolorem modi culpa! Veniam exercitationem
                                                 est debitis sinte<i class="fa fa-quote-right fa-2x pl-2"></i>
